tests/invalid/typeclass_mode.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module typeclass_mode.
:- interface.

:- typeclass c(T) where [
    mode p(in) is det
].

